Add batch file upload

--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/AccessArea/Index">Controle Acesso</a></li>
                                 <li><a href="/Member/Index">Novo Membro</a></li>
-                                @*<li><a href="#" onclick="alert('Funcionalidade em Desenvolvimento')">Subir Lista Membro</a></li>*@
+                                <li><a href="/BatchCommand/Index">Subir Lista Membro</a></li>
                             </ul>
                         </li>
                         }
