Check activities and callings from yesterday to n interval

--- a/OrganizadorReuniao/Views/Activities/Index.cshtml
+++ b/OrganizadorReuniao/Views/Activities/Index.cshtml
@@ -23,6 +23,13 @@
 }
 else
 {
+    <br />
+    
+    <div class="alert alert-danger">
+        <label><span class="glyphicon glyphicon-flag" aria-hidden="true"></span>&nbsp;&nbsp;Atenção</label>
+        <p>Atividades que já passaram serão excluídas automaticamente.</p>
+    </div>
+    
     <table class="table table-striped datatable">
         <thead>
             <tr>
