--- a/OrganizadorReuniao/Views/Memo/Index.cshtml
+++ b/OrganizadorReuniao/Views/Memo/Index.cshtml
@@ -56,7 +56,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <h2>@OrganizadorReuniao.Languages.pt_br.MemoPageTitle - @ViewBag.unitName</h2>
+        <h2>@OrganizadorReuniao.Languages.pt_br.MemoPageTitle @ViewBag.unitName</h2>
     </div>
     <div class="col-md-4">
         <label><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;&nbsp;Data</label>
