--- a/OrganizadorReuniao/Views/Activities/Index.cshtml
+++ b/OrganizadorReuniao/Views/Activities/Index.cshtml
@@ -49,7 +49,7 @@ else
                         <img src='/Images/Pencil-icon.png' title='Editar evento' style='display: block; cursor: pointer;' onclick='editActivity(@activity.Id)' /></td>
                     <td class="no-print">
                         <img src='/Images/Button-Delete-icon.png' title='Excluir evento' style='display: block; cursor: pointer;' onclick="removeActivity(@activity.Id, '@activity.Name')" /></td>
-                    <td>@activity.Date.ToString("d/MM/yy HH:mm")</td>
+                    <td>@activity.Date.ToString("d/M H:mm")</td>
                     <td>@activity.Name</td>
                     <td>@activity.Place</td>
                     <td>@activity.Obs</td>
