--- a/OrganizadorReuniao/Views/Report/Index.cshtml
+++ b/OrganizadorReuniao/Views/Report/Index.cshtml
@@ -48,7 +48,10 @@
         <div class="col-sm-4">
             <label for="year">Ano</label>
             <select id="year" name="year" class="form-control" onchange="updateList()">
-                <option value="2015">2015</option>
+                @for (int i = 2015; i <= DateTime.Now.Year; i++)
+                {
+                    <option value="@i" @((i == (int)ViewBag.year) ? "selected='selected'" : "")>@i</option>
+                }
             </select>
         </div>
         <div class="col-sm-8">
